# 3zadacha.4sem

./: AutoTest.hpp  CMakeLists.txt  CRatVector.cpp  CRatVector.h  CRatVector0.cpp  CRatVector0.h  CRatVector1.cpp  CRatVector1.h  Creator.cpp  Creator.h  Source.cpp  input.txt
